kubernetes/mojaloop/ml-sim-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-simulators-sim-dfsp1-frontend
  labels:
    app: ml-simulators-sim-dfsp1-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-simulators-sim-dfsp1-frontend
  template:
    metadata:
      labels:
        app: ml-simulators-sim-dfsp1-frontend
    spec:
      containers:
        - name: frontend
          image: "lalithkota/mojaloop-simulator-ui:v0.1.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ml-simulators-sim-dfsp1-frontend
  labels:
    app: ml-simulators-sim-dfsp1-frontend
spec:
  selector:
    app: ml-simulators-sim-dfsp1-frontend
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-simulators-sim-dfsp2-frontend
  labels:
    app: ml-simulators-sim-dfsp2-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-simulators-sim-dfsp2-frontend
  template:
    metadata:
      labels:
        app: ml-simulators-sim-dfsp2-frontend
    spec:
      containers:
        - name: frontend
          image: "lalithkota/mojaloop-simulator-ui:v0.1.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ml-simulators-sim-dfsp2-frontend
  labels:
    app: ml-simulators-sim-dfsp2-frontend
spec:
  selector:
    app: ml-simulators-sim-dfsp2-frontend
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
